--- a/src/PeruShopHub.Web/src/app/pages/products/products-list.component.scss
+++ b/src/PeruShopHub.Web/src/app/pages/products/products-list.component.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: hidden;
+  overflow: clip;
 
   &__action-bar {
     display: flex;
